build the server

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-  <input type="text" name="search" placeholder="search">
-  <button type="button" name="search"></button>
+  <input id = "inputValue" type="text" name="search" placeholder="search">
+  <button id = "searchBtn" type="button" name="search">search</button>
 
   <script src="./js/logic.js" charset="utf-8"></script>
   <script src="./js/index.js" charset="utf-8"></script>
