save work to pull master

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,14 @@
 </head>
 
 <body>
-  <input id = "inputValue" type="text" name="search" placeholder="search">
-  <button id = "searchBtn" type="button" name="search">search</button>
+  <input id="inputValue" type="text" name="search" placeholder="search">
+  <button id="searchBtn" type="button" name="search">search</button>
+
+  <div id="results"></div>
 
   <script src="./js/logic.js" charset="utf-8"></script>
   <script src="./js/index.js" charset="utf-8"></script>
+
 </body>
 
 </html>
