--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,19 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Weather Map</title>
 </head>
 
 <body>
-  <input id = "inputValue" type="text" name="search" placeholder="search">
-  <button id = "searchBtn" type="button" name="search">search</button>
+
+<section class="sec">
+
+  <!-- <h1 class="header1">Weather Map</h1>
+  <h2 class="header2">Add the country to get its weather..</h2> -->
+  <input id = "inputValue" type="text" name="search" placeholder="  Enter Ciry Name.." class="input">
+  <button id = "searchBtn" type="button" name="search" class="button"><i class="fa fa-search"></i></button>
+</section>
   <div id="map"></div>
   <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIDa21LnOA_89nAEIF8v0T3GHMQpNR9P4&callback=initMap">
