--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="shortcut icon" href="img/icon.png" />
   <link rel="stylesheet" href="./css/style.css">
   <title>Weather Map</title>
 </head>
