--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <input id = "inputValue" type="text" name="search" placeholder="search" class="input">
   <button id = "searchBtn" type="button" name="search" class="button"><i class="fa fa-search"></i></button>
   </section>
-  <div id="results" ></div>
+  <ul id="results" ></ul>
   <div id="map"></div>
 
   <script src="./js/logic.js" charset="utf-8"></script>
