--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <section class="sec">
-  <input id = "inputValue" type="text" name="search" placeholder="search" class="input">
+  <input id = "inputValue" type="text" name="search" placeholder="Enter City,country code" class="input">
   <button id = "searchBtn" type="button" name="search" class="button"><i class="fa fa-search"></i></button>
   </section>
   <div id="map"></div>
